--- a/Front/my-app/package.json
+++ b/Front/my-app/package.json
@@ -27,6 +27,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
+    "toastify-js": "^1.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
