--- a/Back/requirements.txt
+++ b/Back/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.5.2
 Django==4.0.6
+gunicorn==20.1.0
 django-cors-headers==3.13.0
 djangorestframework==3.13.1
 djangorestframework-jwt==1.11.0
