--- a/Back/requirements.txt
+++ b/Back/requirements.txt
@@ -9,3 +9,29 @@ PyJWT==1.7.1
 pytz==2022.1
 sqlparse==0.4.2
 Pillow==9.2.0
+
+python-slugify==2.0.1  # https://github.com/un33k/python-slugify
+argon2-cffi==18.3.0  # https://github.com/hynek/argon2_cffi
+whitenoise==4.1.2  # https://github.com/evansd/whitenoise
+redis>=2.10.6, < 3  # pyup: < 3 # https://github.com/antirez/redis
+
+# Django
+# ------------------------------------------------------------------------------
+django==2.0.10  # pyup: < 2.1  # https://www.djangoproject.com/
+django-environ==0.4.5  # https://github.com/joke2k/django-environ
+django-model-utils==3.1.2  # https://github.com/jazzband/django-model-utils
+django-allauth==0.38.0  # https://github.com/pennersr/django-allauth
+django-crispy-forms==1.7.2  # https://github.com/django-crispy-forms/django-crispy-forms
+django-redis==4.10.0  # https://github.com/niwinz/django-redis
+ 
+# Django REST Framework
+coreapi==2.3.3  # https://github.com/core-api/python-client
+# PRECAUTION: avoid production dependencies that aren't in development
+ 
+# -r ./base.txt
+psycopg2==2.7.4 --no-binary psycopg2  # https://github.com/psycopg/psycopg2
+ 
+# Django
+# ------------------------------------------------------------------------------
+django-storages[boto3]==1.7.1  # https://github.com/jschneier/django-storages
+django-anymail[mailgun]==5.0  # https://github.com/anymail/django-anymail
